--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SESSION_ID= 
-PREFIX=.
+SESSION_ID=Arch_d145330151f83d2fd218e7b5c63224d3
+PREFIX=/
 
 # Please Add Your Session ID Above ☝️ To get Yours -- Visit https://arch-md.goodnesstechhost.xyz 
 # For example
