--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SESSION_ID=Arch_24a3b14e37c768483fa3a246ca0c2d7c
-PREFIX=/
+SESSION_ID=Arch_cf59483707c94c713bcddfedf2d326af
+PREFIX=.
 
 # Please Add Your Session ID Above ☝️ To get Yours -- Visit https://arch-md.goodnesstechhost.xyz 
 # For example
